--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="Theme.LAFauxPass" parent="Base.Theme.LAFauxPass">
+    <style name="Theme.LeFauxPass" parent="Base.Theme.LeFauxPass">
         <!-- Transparent system bars for edge-to-edge. -->
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
